Fix story timeline content vertical alignment.

--- a/public/wp-content/themes/immersivly/src/sass/app.scss
+++ b/public/wp-content/themes/immersivly/src/sass/app.scss
@@ -884,6 +884,11 @@ section.stuck {
     a {
       color: #fff;
     }
+    h3 {
+      height: 135px;
+      display: table-cell;
+      vertical-align: middle;
+    }
   }
 }
 
